--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^9.22.0",
     "next": "latest",
     "react": "18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
