--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "cookie": "^0.5.0",
     "firebase": "^9.22.0",
+    "js-cookie": "^3.0.5",
     "next": "latest",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
