--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie": "^0.5.0",
     "firebase": "^9.22.0",
     "js-cookie": "^3.0.5",
     "next": "latest",
+    "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
