--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
-    "react-draggable": "^4.4.5"
+    "react-draggable": "^4.4.5",
+    "react-grid-layout": "^1.3.4",
+    "react-resizable": "^3.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
