--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.0",
     "cookie": "^0.5.0",
     "firebase": "^9.22.0",
     "js-cookie": "^3.0.5",
     "next": "latest",
     "nodemailer": "^6.9.3",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
     "react-grid-layout": "^1.3.4",
-    "react-resizable": "^3.0.5"
+    "react-resizable": "^3.0.5",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
