--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
     "cookie": "^0.5.0",
-    "firebase": "^9.22.0",
     "js-cookie": "^3.0.5",
     "next": "latest",
     "nodemailer": "^6.9.3",
@@ -20,7 +19,9 @@
     "react-draggable": "^4.4.5",
     "react-grid-layout": "^1.3.4",
     "react-resizable": "^3.0.5",
+    "firebase": "9.22.0",
     "swiper": "^9.4.1"
+
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
